--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,26 @@
     <artifactId>netty-learning-mydemo</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <modules>
         <module>00_test-import-jar</module>
-
         <!--        最简单的http服务实现demo -->
         <module>01_hello_netty</module>
         <module>02-load-jar-demo</module>
         <module>03-netty-rpc</module>
+        <module>04-tcp-demo</module>
     </modules>
 
     <dependencies>
