master:多人聊天发送消息

--- a/04-tcp-demos/pom.xml
+++ b/04-tcp-demos/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hello-netty</artifactId>
+        <artifactId>netty-learning-mydemo</artifactId>
         <groupId>com.stan</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>04-tcp-demo</artifactId>
+    <artifactId>04-tcp-demos</artifactId>
 
 
 </project>
