--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,22 @@
     <version>1.0.0</version>
     <build>
         <plugins>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>6</source>-->
+<!--                    <target>6</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
+            <!--compiler插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -27,7 +37,7 @@
         <module>01_hello_netty</module>
         <module>02-load-jar-demo</module>
         <module>03-netty-rpc</module>
-        <module>04-tcp-demo</module>
+        <module>04-tcp-demos</module>
     </modules>
 
     <dependencies>
@@ -36,6 +46,12 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.42.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+
     </dependencies>
 
 </project>
