--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>02-load-jar-demo</module>
         <module>03-netty-rpc</module>
         <module>04-tcp-demos</module>
+        <module>05-netty-spring-mybatis</module>
     </modules>
 
     <dependencies>
@@ -51,7 +52,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
     </dependencies>
 
 </project>
