--- a/05-netty-spring-mybatis/pom.xml
+++ b/05-netty-spring-mybatis/pom.xml
@@ -35,6 +35,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
@@ -54,11 +59,7 @@
         <!--            <artifactId>spring-orm</artifactId>-->
         <!--            <version>${spring.version}</version>-->
         <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework</groupId>-->
-        <!--            <artifactId>spring-tx</artifactId>-->
-        <!--            <version>${spring.version}</version>-->
-        <!--        </dependency>-->
+
         <!--        <dependency>-->
         <!--            <groupId>org.springframework</groupId>-->
         <!--            <artifactId>spring-expression</artifactId>-->
